fix dark mode

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -10,7 +10,7 @@
 
 @media screen and (prefers-color-scheme: dark)
   \:root
-    --color-background:#21282C
+    --color-background:#171b1d
     --color-shadow:#293136
     --color-text:#909496
     --color-mid:#e1e1e1
