--- a/styles/parts/WorksGrid.module.sass
+++ b/styles/parts/WorksGrid.module.sass
@@ -23,8 +23,8 @@
           font-weight: 600
           transition: all ease-in-out 0.3s
         p
-          max-width: 95%
-          line-height: 140%
+          max-width: 98%
+          line-height: 130%
       &:hover,
       &:focus
         .data
